# chromiumoxide

./: Cargo.toml
chromiumoxide_cdp/: Cargo.toml  build.rs
chromiumoxide_cdp/src/: cdp.rs  lib.rs  revision.rs
chromiumoxide_cdp/tests/: generate.rs
chromiumoxide_pdl/: Cargo.toml
chromiumoxide_pdl/src/: lib.rs
chromiumoxide_pdl/src/pdl/: mod.rs  parser.rs
chromiumoxide_types/src/: lib.rs
examples/: block-navigation.rs  httpfuture.rs  iframe-workaround.rs  interception.rs  screenshot.rs  wiki-tokio.rs  wiki.rs
src/: async_process.rs  browser.rs  conn.rs  element.rs  error.rs  keys.rs  layout.rs  lib.rs  listeners.rs  page.rs  utils.rs
src/handler/: browser.rs  frame.rs  mod.rs  page.rs  viewport.rs
