[package]
name = "chromiumoxide"
version = "0.5.7"
rust-version = "1.70"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/mattsse/chromiumoxide"
repository = "https://github.com/mattsse/chromiumoxide"
description = "Library for interacting with a chrome instance with the chrome devtools protocol"
keywords = ["chrome", "chromedriver", "puppeteer", "automation"]
categories = ["web-programming", "api-bindings", "development-tools::testing"]

[dependencies]
async-tungstenite = { version = "0.25", features = ["tokio-runtime"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
chromiumoxide_types = { path = "chromiumoxide_types", version = "*" }
chromiumoxide_cdp = { path = "chromiumoxide_cdp", version = "*" }
serde_json = "1"
which = "6"
thiserror = "1"
url = "2"
base64 = "0.22"
fnv = "1"
futures-timer = "3"
cfg-if = "1"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "fs",
    "macros",
    "process",
] }
tokio-util = { version = "*" }
tracing = "0.1"
pin-project-lite = "0.2"
dunce = "1"
regex = "1.9.3"
bytes = { version = "1.4.0", features = ["serde"] }
reqwest = { version = "0.12.3", default-features = false }

[dev-dependencies]
quote = "1"
proc-macro2 = "1"
chrono = "0.4.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }


# [workspace]
# members = [
#     "chromiumoxide_pdl",
#     "chromiumoxide_types",
#     "chromiumoxide_cdp",
# ]
